--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'org.nanohttpd:nanohttpd:2.3.1'
+//    implementation 'org.nanohttpd:nanohttpd:2.3.1'
 //    implementation 'org.cybergarage.upnp:core:2.1.1'
 
 }
